# ZOCR

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  LICENSING.md  PRICING.md  README.md  SECURITY.md  SUPPORT.md  compose.prod.yaml  compose.yaml  pyproject.toml  requirements.txt  zocr_allinone_merged (1).py  zocr_allinone_merged_plus.py
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/helm/zocr-suite/: Chart.yaml  values.yaml
deploy/helm/zocr-suite/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml  secret.yaml  service.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  service.yaml
docs/: COMPLIANCE.md  DELIVERY.md  DEPLOYMENT.md  hybrid_rag_zocr.md  provider_endpoints.md
sales/: CLIENT_INTAKE.md  PILOT_ONE_SLIDE.md  QUOTE_TEMPLATE.md
samples/: README.md  llm_vlm_endpoints.example.yaml
samples/bank_statement/: README.md
samples/boarding_pass/: README.md
samples/customs_declaration/: README.md
samples/demo_inputs/: .gitkeep
samples/expense_report/: README.md
samples/grant_application/: README.md
samples/insurance_claim/: README.md
samples/invoice/: README.md
samples/loan_statement/: README.md
samples/medical_bill/: README.md
samples/payslip/: README.md
samples/purchase_order/: README.md
samples/rental_agreement/: README.md
samples/shipping_notice/: README.md
samples/tax_form/: README.md
samples/travel_itinerary/: README.md
samples/utility_bill/: README.md
scripts/: generate_compliance_artifacts.sh  generate_third_party_notices.py  make_delivery.sh  verify_delivery.sh
tests/: conftest.py  techdocs_eval.py  test_api_app.py  test_api_cli.py  test_api_contract.py  test_api_http.py  test_api_jobs_smoke.py  test_api_surface.py  test_api_validation.py  test_bm25_scoring.py  test_cli_smoke.py  test_consensus_cli_toy_bench_loader.py  test_core_surface.py  test_embedders.py  test_export_golden_bbox.py  test_hybrid_query.py  test_input_enumeration_tmp_segment.py  test_input_handler.py  test_multimodal_embeddings.py  test_ocr_pipeline.py  test_ocr_text_engines.py  test_provider_presets.py  test_rag_manifest.py  test_service_upload_limits.py  test_simple_cli.py  test_simple_components.py  test_structural_grams.py  test_structural_graph.py  test_tesseract_text_ocr.py  test_toy_runtime_smoke.py  test_validate_smoke.py  test_visual_retrieval.py
tests/fixtures/techdocs/: README.md  benchmark.json  sample_predictions.json
tests/ingest/: test_pdf_multimodal.py
zocr/: __init__.py  __main__.py  _compat.py  _surface.py  _version.py  api.py  api_app.py  api_cli.py  api_http.py  api_spec.py  bench.py  validate.py
zocr/artifacts/: __init__.py  manifest.py
zocr/consensus/: __init__.py  _surface.py  binarization.py  cli.py  columns.py  components.py  local_search.py  morphology.py  runtime.py  runtime_primitives.py  toy_runtime.py  utils.py  zocr_consensus.py
zocr/consensus/ecore/: __init__.py  columns.py  morphology.py  utils.py
zocr/core/: __init__.py  __main__.py  _surface.py  augmenter.py  base.py  domains.py  embedders.py  exporters.py  indexer.py  monitoring.py  numba_support.py  query_engine.py  rendering.py  structural_grams.py  tokenization.py  zocr_core.py
zocr/diff/: README.md  __init__.py  __main__.py  assist.py  cli.py  differ.py  handoff.py  metrics.py  render.py  scoring.py  simple.py
zocr/embeddings/: __init__.py  multimodal.py
zocr/ingest/: __init__.py  pdf_multimodal.py
zocr/ocr_pipeline/: __init__.py  cli.py  hybrid.py  input_handler.py  interfaces.py  mocks.py  models.py  pipeline.py  simple.py  structure.py  tesseract.py
zocr/orchestrator/: __init__.py  dependencies.py  history.py  instrumentation.py  plugins.py  prior.py  reporting.py  stack_inspector.py  zocr_pipeline.py
zocr/resources/: domain_dictionary.py  model_provider_presets.py  tesslite_defaults.py
zocr/service/: __init__.py  admin_cli.py  app.py  auth.py  cli.py  jobs.py  metadata.py  policy.py  queue.py  storage.py  worker.py
zocr/utils/: __init__.py  json_utils.py
